--- a/src/assets/styles/partials/_subscribe.scss
+++ b/src/assets/styles/partials/_subscribe.scss
@@ -23,4 +23,8 @@
       right: -0.25rem;
     }
   }
+
+  p {
+    margin-bottom: 0;
+  }
 }
